--- a/colle_tMedecine/colle_tMedecine/View/patients.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/patients.xaml
@@ -2,25 +2,6 @@
 	x:Class="colle_tMedecine.View.Patients"
 	Width="992" Height="580" mc:Ignorable="d">
     <UserControl.Resources>
-        <DataTemplate x:Key="listPatient">
-            <StackPanel Orientation="Horizontal" Height="28.5" Width="581">
-                <TextBlock Height="28" TextWrapping="Wrap" Width="151.5" HorizontalAlignment="Left"><Run Language="fr-fr" Text="{Binding Path=Name}"/></TextBlock>
-                <TextBlock TextWrapping="Wrap" Width="144" Margin="0,0,0,6"><Run Language="fr-fr" Text="{Binding Path=Firstname}"/></TextBlock>
-                <TextBlock TextWrapping="Wrap" Width="78" Margin="0,0,0,3"><Run Language="fr-fr" Text="{Binding Path=Birthday}"/></TextBlock>
-                <Button Command="{Binding Path=DataContext.PatientSheet, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
-                        CommandParameter="{Binding}"
-                        Content="Consulter la fiche" 
-                        Width="108" 
-                        Margin="0,0,0,4.5">
-                </Button>
-                <Button Content="Supprimer"
-                        Width="91.5" 
-                        Margin="0,0,0,4.5"
-                        Command="{Binding Path=DataContext.SupprPatient, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
-                        CommandParameter="{Binding}"/>
-                    
-            </StackPanel>
-        </DataTemplate>
     </UserControl.Resources>
     <Grid x:Name="LayoutRoot">	
     	<Rectangle Margin="8,-0.5,8,49.5" Stroke="Black" RadiusX="20" RadiusY="20">
@@ -43,7 +24,7 @@
                         CommandParameter="{Binding}"
                         Content="Consulter la fiche" 
                         Width="108" 
-                        Margin="0,0,0,4.5"/>
+                        Margin="0,0,0,4.5" Style="{DynamicResource SimpleButton}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -54,7 +35,7 @@
                         Width="91.5" 
                         Margin="0,0,0,4.5"
                         Command="{Binding Path=DataContext.SupprPatient, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
-                        CommandParameter="{Binding}"/>
+                        CommandParameter="{Binding}" Style="{DynamicResource SimpleButton}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
