--- a/colle_tMedecine/colle_tMedecine/View/Nouveau_Personnel.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Nouveau_Personnel.xaml
@@ -40,7 +40,7 @@
         		<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
         	</TextBlock.Background><Run Language="fr-fr" Text="Ajouter un collaborateur"/></TextBlock>
         <StackPanel HorizontalAlignment="Left" Height="87" Margin="430,335,0,0" VerticalAlignment="Top" Width="233" RenderTransformOrigin="0.49,0.51">
-            <Image MaxHeight="50" Source="{Binding Path=Pict}"/>
+            <Image MaxHeight="50" Source="{Binding Picture.Source}"/>
             <Button Content="Ajouter une image" Command="{Binding AddImage}"  Height="33" Style="{DynamicResource SimpleButton}"/>
         </StackPanel>
         <!--TextBlock Height="49.5"  Margin="430,0,329,205.993" TextWrapping="Wrap" Text="Glisser-déposer votre image ici" VerticalAlignment="Bottom" TextAlignment="Center" Foreground="#FF1B1B1B">
