ajout de l'image pour l'user plus panneau identity plus avatar

--- a/colle_tMedecine/colle_tMedecine/View/Nouveau_Personnel.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Nouveau_Personnel.xaml
@@ -6,9 +6,12 @@
 	mc:Ignorable="d"
     xmlns:ff="clr-namespace:colle_tMedecine.Helper"
 	x:Class="colle_tMedecine.View.Nouveau_Personnel"
+    xmlns:mylocal="clr-namespace:colle_tMedecine.Converter"
 	Width="992" Height="580">
-
-	<Grid x:Name="LayoutRoot">
+    <UserControl.Resources>
+        <mylocal:ConvertByteArrayToImage x:Key="ConvertImage"/>
+    </UserControl.Resources>
+    <Grid x:Name="LayoutRoot">
 		<Rectangle Margin="8,0.007,8,90.993" Stroke="Black" RadiusX="20" RadiusY="20">
         	<Rectangle.Fill>
         		<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
@@ -40,7 +43,7 @@
         		<SolidColorBrush Color="{DynamicResource BlueTitleBg}"/>
         	</TextBlock.Background><Run Language="fr-fr" Text="Ajouter un collaborateur"/></TextBlock>
         <StackPanel HorizontalAlignment="Left" Height="87" Margin="430,335,0,0" VerticalAlignment="Top" Width="233" RenderTransformOrigin="0.49,0.51">
-            <Image MaxHeight="50" Source="{Binding Picture.Source}"/>
+            <Image MaxHeight="50" Source="{Binding Pict, Converter={StaticResource ConvertImage}}"/>
             <Button Content="Ajouter une image" Command="{Binding AddImage}"  Height="33" Style="{DynamicResource SimpleButton}"/>
         </StackPanel>
         <!--TextBlock Height="49.5"  Margin="430,0,329,205.993" TextWrapping="Wrap" Text="Glisser-déposer votre image ici" VerticalAlignment="Bottom" TextAlignment="Center" Foreground="#FF1B1B1B">
