--- a/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/MainWindow.xaml
@@ -1,14 +1,19 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="colle_tMedecine.View.MainWindow"
-        Title="MainWindow" Height="720" Width="1024" MaxHeight="720" MaxWidth="1024" MinHeight="720" MinWidth="1024" Background="#FF11476D">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        mc:Ignorable="d" x:Class="colle_tMedecine.View.MainWindow"
+        xmlns:local="clr-namespace:colle_tMedecine.Converter"
+        Title="Medecine" Height="720" Width="1024" MaxHeight="720" MaxWidth="1024" MinHeight="720" MinWidth="1024" Background="#FF11476D">
     <Window.Resources>
- 
+        <local:ConvertByteArrayToImage x:Key="ConvertImage"/>
+
     </Window.Resources>
 	<Grid>
 		<Grid.Resources>
 			<BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+            
 		</Grid.Resources>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="0.886*"/>
@@ -40,12 +45,14 @@
                 <Button Content="Back" Command="{Binding BackCommand}" HorizontalAlignment="Left" Style="{DynamicResource navButton}" Height="30" Margin="24,8,0,0" VerticalAlignment="Top" Width="105" />
                 <Button  Command="{Binding ShowPatientList}" x:Name="patient_nav_item" Content="Patients" Style="{DynamicResource ActiveMenuButton}" Width="103" Margin="24,0,0,0" HorizontalAlignment="Left" Height="33.5" VerticalAlignment="Bottom" />
                 <Button   Command="{Binding ShowUserList}" x:Name="personnel_nav_item" Content="Personnel Medical" Style="{DynamicResource MenuButton}" Width="121" HorizontalAlignment="Left" Margin="127,0,0,0" Height="33.5" VerticalAlignment="Bottom" />
-				<StackPanel x:Name="Compte"  Margin="0,8,8,29.5" Width="114.5" HorizontalAlignment="Right" d:LayoutOverrides="HorizontalAlignment">
-					<TextBlock x:Name="Login_info" Margin="0" TextWrapping="Wrap" Width="114.417" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" TextAlignment="Center" Height="24.96"><Run Language="fr-fr" Text=" Roger Henri"/></TextBlock>
-					<TextBlock x:Name="Role_info" Height="25" TextWrapping="Wrap" HorizontalAlignment="Left" Foreground="White" Width="114.458" TextAlignment="Center"><Run Language="fr-fr" Text="Medecin"/></TextBlock>
+				<StackPanel  x:Name="Compte"  Margin="0,8,8,29.5" Width="114.5" HorizontalAlignment="Right" d:LayoutOverrides="HorizontalAlignment">
+                    <TextBlock x:Name="Login_info" Text="{Binding UserIdentity}" Margin="0" TextWrapping="Wrap" Width="114.417" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" TextAlignment="Center" Height="24.96">
+                        <Run Language="fr-fr" />
+                    </TextBlock>
+					<TextBlock x:Name="Role_info" Height="25" TextWrapping="Wrap" HorizontalAlignment="Left" Foreground="White" Width="114.458" TextAlignment="Center"><Run Language="fr-fr" Text="{Binding ConnectedUser.Role}"/></TextBlock>
                     <Button x:Name="Deconnexion" Command="{Binding LogOut}" Content="Deconnexion"  Style="{DynamicResource SimpleButton}" Width="80.5" HorizontalAlignment="Center" Margin="0" Height="24.083" />
 				</StackPanel>
-				<Image x:Name="Avatar"  Margin="0,8,126.5,29.5" Width="88.5" HorizontalAlignment="Right" d:LayoutOverrides="HorizontalAlignment"/>
+				<Image x:Name="Avatar" Source="{Binding ConnectedUser.Pic, Converter={StaticResource ConvertImage}}" Margin="0,8,126.5,29.5" Width="88.5" HorizontalAlignment="Right" d:LayoutOverrides="HorizontalAlignment"/>
 			</Grid>
 		</ContentControl>
 		<ContentControl x:Name="contentcontrol" Margin="-5.104,122,8,12" Background="#FF437495" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
