--- a/colle_tMedecine/colle_tMedecine/View/patients.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/patients.xaml
@@ -3,9 +3,7 @@
 	Width="992" Height="580" mc:Ignorable="d">
   
     <Grid x:Name="LayoutRoot">
-        <Grid.Resources>
-            <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
-        </Grid.Resources>
+        
         <Rectangle Margin="8,-0.5,8,49.5" Stroke="Black" RadiusX="20" RadiusY="20">   	
 			<Rectangle.Fill>
 				<SolidColorBrush Color="#FFC9DBE7" Opacity="0.7"/>
@@ -15,6 +13,9 @@
     		<DataGrid.Foreground>
     			<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
     		</DataGrid.Foreground>
+            <DataGrid.Resources>
+                    <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>     
+            </DataGrid.Resources>
     		<DataGrid.Columns>
     			<DataGridTextColumn Header="Nom" Width="*" Binding="{Binding Path=Name}" Foreground="Black" />
                 <DataGridTextColumn Header="Prenom" Width="*" Binding="{Binding Path=Firstname}" />
@@ -39,7 +40,6 @@
                             Command="{Binding Path=DataContext.SupprPatient, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
                             CommandParameter="{Binding}" Style="{DynamicResource SimpleButton}"
                             Visibility="{Binding IsAdmin, Mode=TwoWay, Converter={StaticResource BoolToVisConverter}}"/>
-
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
