--- a/colle_tMedecine/colle_tMedecine/View/patients.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/patients.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:colle_tMedecine.View" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:pi="http://schemas.microsoft.com/prototyping/2010/interactivity" x:Name="patients"
-	x:Class="colle_tMedecine.View.Patients"
-	Width="992" Height="580" mc:Ignorable="d">
+	x:Class="colle_tMedecine.View.Patients" 
+	 xmlns:mylocal="clr-namespace:colle_tMedecine.Helper"
+             Width="992" Height="580" mc:Ignorable="d">
   
     <Grid x:Name="LayoutRoot">
         
@@ -14,7 +15,8 @@
     			<SolidColorBrush Color="{DynamicResource Blue_Button}"/>
     		</DataGrid.Foreground>
             <DataGrid.Resources>
-                    <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>     
+                <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+                <mylocal:BindingHelper x:Key="ColumnBinding" Data="{Binding}"/>
             </DataGrid.Resources>
     		<DataGrid.Columns>
     			<DataGridTextColumn Header="Nom" Width="*" Binding="{Binding Path=Name}" Foreground="Black" />
@@ -31,7 +33,9 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn>
+                <DataGridTemplateColumn  Visibility="{Binding Data.IsAdmin,
+                        Converter={StaticResource BoolToVisConverter},
+                        Source={StaticResource ColumnBinding}}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="Supprimer"
@@ -39,7 +43,7 @@
                             Margin="0,0,0,4.5"
                             Command="{Binding Path=DataContext.SupprPatient, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
                             CommandParameter="{Binding}" Style="{DynamicResource SimpleButton}"
-                            Visibility="{Binding IsAdmin, Mode=TwoWay, Converter={StaticResource BoolToVisConverter}}"/>
+                            />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -47,7 +51,7 @@
     	</DataGrid>
 		<TextBox x:Name="Search_bar"  Text="{Binding Search}" Height="27.5" Margin="76.5,75.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="207" FontStyle="Italic"/>
         <Button x:Name="search_button" Command="{Binding SearchPatient}" Content="Rechercher" HorizontalAlignment="Left" Height="27.5" Margin="294.708,75.5,0,0" VerticalAlignment="Top" Width="99.5" Style="{DynamicResource SimpleButton}" />
-        <Button x:Name="new_patient_button" Command="{Binding NewPatient}" Content="Ajouter un patient" HorizontalAlignment="Right" Height="36.5" Margin="0,66.5,68,0" VerticalAlignment="Top" Width="131.5" Style="{DynamicResource SimpleButton}" />
+        <Button x:Name="new_patient_button" Command="{Binding NewPatient}" Visibility="{Binding IsAdmin, Mode=TwoWay, Converter={StaticResource BoolToVisConverter}}" Content="Ajouter un patient" HorizontalAlignment="Right" Height="36.5" Margin="0,66.5,68,0" VerticalAlignment="Top" Width="131.5" Style="{DynamicResource SimpleButton}" />
 		<TextBlock HorizontalAlignment="Left" Height="33" Margin="9.333,29.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
 				<DropShadowEffect ShadowDepth="6" RenderingBias="Quality"/>
 			</TextBlock.Effect><TextBlock.Background>
