fix bug on Connect errorMessage

--- a/colle_tMedecine/colle_tMedecine/App.xaml
+++ b/colle_tMedecine/colle_tMedecine/App.xaml
@@ -37,5 +37,9 @@
         <Style x:Key="blueText">
             <Setter Property="Button.Foreground" Value="{StaticResource BlueText}" />
         </Style>
+        <Style x:Key="errorMessageText">
+            <Setter Property="Button.Foreground" Value="#FFFF3131" />
+            <Setter Property="Button.FontWeight" Value="Bold"/>
+        </Style>
     </Application.Resources>
 </Application>
