--- a/colle_tMedecine/colle_tMedecine/View/Login.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Login.xaml
@@ -29,7 +29,27 @@
 			</StackPanel>
 		</StackPanel>
 		<TextBlock Height="39" Margin="258.458,18,260.458,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="26.667" FontWeight="Bold" d:LayoutOverrides="Width" Foreground="White"><Run Language="fr-fr" Text="Bienvenue sur l'Application Medecine"/></TextBlock>
-		
-		
-	</Grid>
+        <TextBlock Opacity="{Binding ShowConnectError}" HorizontalAlignment="Left"  Margin="403,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="29" Width="215"><Run Language="fr-fr" Text="{Binding ErrorMessage}"/>
+            <TextBlock.Style>
+                <Style>
+                    <Setter Property="Button.Foreground" Value="#FFFF3131" />
+                    <Setter Property="Button.FontWeight" Value="Bold"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Path=ShowConnectError}" Value="1">
+                            <DataTrigger.EnterActions>
+                                <BeginStoryboard >
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="00:00:7" From="1" To="0" Storyboard.TargetProperty="Opacity"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </DataTrigger.EnterActions>
+                        </DataTrigger>
+                        
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+
+
+    </Grid>
 </UserControl>
