--- a/colle_tMedecine/colle_tMedecine/App.xaml
+++ b/colle_tMedecine/colle_tMedecine/App.xaml
@@ -20,19 +20,22 @@
             </Style.Triggers>
             <Setter Property="Button.Foreground" Value="White" />
             <Setter Property="Button.Background" Value="{DynamicResource SimpleButtonBackground}" />
-
+            <Setter Property="Button.Focusable" Value="false" />
         </Style>
         <Style x:Key="ActiveMenuButton">
             <Setter Property="Button.Foreground" Value="White" />
             <Setter Property="Button.Background" Value="#FF3A7198" />
+            <Setter Property="Button.Focusable" Value="false" />
         </Style>
         <Style x:Key="MenuButton">
             <Setter Property="Button.Foreground" Value="{DynamicResource BlueText}" />
             <Setter Property="Button.Background" Value="#FF9EBBCF" />
+            <Setter Property="Button.Focusable" Value="false" />
         </Style>
         <Style x:Key="navButton">
             <Setter Property="Button.Foreground" Value="White" />
             <Setter Property="Button.Background" Value="{StaticResource navButtonBackground}" />
+            <Setter Property="Button.Focusable" Value="false" />
         </Style>
         <Style x:Key="blueText">
             <Setter Property="Button.Foreground" Value="{StaticResource BlueText}" />
