--- a/colle_tMedecine/colle_tMedecine/App.xaml
+++ b/colle_tMedecine/colle_tMedecine/App.xaml
@@ -8,6 +8,7 @@
     	<Color x:Key="BlueTitleBg">#FF3A7198</Color>
         <SolidColorBrush x:Key="SimpleButtonBackground" Color="{DynamicResource Blue_Button}"/>
         <SolidColorBrush x:Key="BlueText" Color="{DynamicResource BlueTextColor}"/>
+        <SolidColorBrush x:Key="BlueGridLine" Color="#FFBCBCBC"/>
         <LinearGradientBrush x:Key="navButtonBackground" EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="#FF94C6E9" Offset="1"/>
             <GradientStop Color="#FF195077"/>
