--- a/colle_tMedecine/colle_tMedecine/View/Personnel.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/Personnel.xaml
@@ -9,19 +9,6 @@
 	Width="992" Height="580">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
-        <DataTemplate x:Key="listUser">
-            <StackPanel Orientation="Horizontal" Height="28.5" Width="581">
-                <TextBlock Height="28" TextWrapping="Wrap" Width="151.5" HorizontalAlignment="Left"><Run Language="fr-fr" Text="{Binding Path=Name}"/></TextBlock>
-                <TextBlock TextWrapping="Wrap" Width="144" Margin="0,0,0,6"><Run Language="fr-fr" Text="{Binding Path=Firstname}"/></TextBlock>
-                <TextBlock TextWrapping="Wrap" Width="78" Margin="0,0,0,3"><Run Language="fr-fr" Text="{Binding Path=Role}"/></TextBlock>
-                <Button Content="Supprimer" 
-                        Visibility="{Binding Path=DataContext.IsAdmin, Mode=TwoWay, Converter={StaticResource BoolToVisConverter}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
-                        Command="{Binding Path=DataContext.SupprUser, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
-                        CommandParameter="{Binding}"
-                        Width="108" 
-                        Margin="0,0,0,4.5"/>    
-            </StackPanel>
-        </DataTemplate>
     </UserControl.Resources>
 	<Grid x:Name="LayoutRoot">
 		<Rectangle Margin="8,-0.25,8,49.25" Stroke="Black" RadiusX="20" RadiusY="20">
@@ -53,15 +40,7 @@
                 <DataGridTextColumn Header="Prenom" Width="*" Binding="{Binding Path=Firstname}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Role" Width="*" Binding="{Binding Path=Role}" IsReadOnly="True"/>
                 <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Command="{Binding Path=DataContext.PatientSheet, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
-                        CommandParameter="{Binding}"
-                        Content="Consulter la fiche" 
-                        Width="108" 
-                        Margin="0,0,0,0" Style="{DynamicResource SimpleButton}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
+                    
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn  Visibility="{Binding Data.IsAdmin,
                         Converter={StaticResource BoolToVisConverter},
@@ -71,7 +50,7 @@
                             <Button Content="Supprimer"
                              Width="91.5" 
                             Margin="0,0,0,0"
-                            Command="{Binding Path=DataContext.SupprPatient, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
+                            Command="{Binding Path=DataContext.SupprUser, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}"
                             CommandParameter="{Binding}" Style="{DynamicResource SimpleButton}"
                             />
                         </DataTemplate>
@@ -79,7 +58,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>          
     	</DataGrid>
-		<TextBox x:Name="Search_bar" Text="{Binding Search}"  Height="27.5" Margin="72.5,77.75,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
+        <TextBox x:Name="Search_bar" Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}"  Height="27.5" Margin="72.5,77.75,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="189" FontStyle="Italic"/>
         <Button x:Name="Search_button" Command="{Binding SearchUser}" Content="Rechercher" HorizontalAlignment="Left" Height="27.5" Margin="277,77.75,0,0"  VerticalAlignment="Top" Width="99.5" Foreground="White" Style="{DynamicResource SimpleButton}" />
         <Button x:Name="new_account" Command="{Binding NewUser}" Visibility="{Binding IsAdmin, Mode=TwoWay, Converter={StaticResource BoolToVisConverter}}" Content="Créer un compte" HorizontalAlignment="Right" Height="36.5" Margin="0,68.75,72,0"  VerticalAlignment="Top" Width="148.5" Foreground="White" Style="{DynamicResource SimpleButton}" />
 		<TextBlock HorizontalAlignment="Left" Height="33" Margin="9.333,29.75,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="380.875" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" Foreground="#FFF3F3F3"><TextBlock.Effect>
