--- a/colle_tMedecine/colle_tMedecine/View/NewObservation.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/NewObservation.xaml
@@ -42,8 +42,38 @@
     	</ListView>
     	<TextBox Text="{Binding Prescription}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,86,244" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="152" RenderTransformOrigin="0.507,2.19" d:LayoutOverrides="VerticalAlignment"/>
         <Button Content="Ajouter" Command="{Binding AddPresc}" Style="{DynamicResource SimpleButton}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,27,244" VerticalAlignment="Bottom" Width="55" d:LayoutOverrides="VerticalAlignment"/>
-        <Image Grid.Column="1" Margin="41,349,746,95" AllowDrop="True" Drop="Image_Drop" DragEnter="Image_DragEnter"/>
-        <ListBox Grid.Column="1" Margin="226,349,26,95" Background="White" ItemsSource="{Binding Pictures}"/>
+
+        <ScrollViewer Margin="226,349,27,95" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="1">
+            <ScrollViewer.Resources>
+                <Style TargetType="{x:Type ListBox}">
+                    <Setter Property="ItemTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <Border BorderBrush="Black" BorderThickness="4" CornerRadius="5" Margin="6">
+                                    <Image Source="{Binding Path=Source}" Stretch="Fill" Width="150" Height="150"/>
+                                </Border>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Setter Property="ItemsPanel">
+                        <Setter.Value>
+                            <ItemsPanelTemplate>
+                                <WrapPanel />
+                            </ItemsPanelTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
+                    <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled" />
+
+                </Style>
+            </ScrollViewer.Resources>
+            <ListBox Grid.Column="1" Margin="226,349,26,95" ItemsSource="{Binding Pictures}"/>
+        </ScrollViewer>
+
+
+        <Button Content="Ajouter une image" Command="{Binding AddImage}" Style="{DynamicResource SimpleButton}" Grid.Column="1" Margin="40,349,746,95" />
         <Button Content="Ajouter" Command="{Binding AddCommand}" Style="{DynamicResource SimpleButton}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,403,68" VerticalAlignment="Bottom" Width="146" d:LayoutOverrides="VerticalAlignment"/> 
         
     </Grid>
