--- a/colle_tMedecine/colle_tMedecine/View/NewObservation.xaml
+++ b/colle_tMedecine/colle_tMedecine/View/NewObservation.xaml
@@ -40,7 +40,7 @@
     			</GridView>
     		</ListView.View>
     	</ListView>
-    	<TextBox Text="{Binding Prescription}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,86,244" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="152" RenderTransformOrigin="0.507,2.19" d:LayoutOverrides="VerticalAlignment"/>
+    	<TextBox Text="{Binding Prescription, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,86,244" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="152" RenderTransformOrigin="0.507,2.19" d:LayoutOverrides="VerticalAlignment"/>
         <Button Content="Ajouter" Command="{Binding AddPresc}" Style="{DynamicResource SimpleButton}" Grid.Column="1" HorizontalAlignment="Right" Height="21" Margin="0,0,27,244" VerticalAlignment="Bottom" Width="55" d:LayoutOverrides="VerticalAlignment"/>
 
         <ScrollViewer Margin="226,349,27,95" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="1">
